--- a/home.css
+++ b/home.css
@@ -3,16 +3,27 @@ body {
   width: 100vw;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   font-family: "Nunito", sans-serif;
 }
 
 header,
-footer {
-  padding: 2vmax 5vmax 0;
+footer,
+.finder-content,
+.content {
+  width: 100%;
+  padding: 2vmax 5vmax;
 }
 
-.icon-home {
+header {
+  background-color: #fff;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0px;
+}
+
+.icon-home,
+.hamburger {
   font-size: 0;
 }
 
@@ -36,7 +47,6 @@ nav {
 }
 
 nav a {
-  padding: 10px;
   color: #b8becd;
   text-decoration: none;
 }
@@ -48,6 +58,7 @@ button.button-logreg {
 }
 
 .nav-item {
+  padding: 0 1rem;
   display: none;
 }
 
@@ -57,7 +68,6 @@ button.button-logreg {
 }
 
 .finder-container {
-  height: 40vw;
   background-image: linear-gradient(#0000004d 100%, #fff 0%),
     url("./assets/explore.jpg");
   background-size: cover;
@@ -65,6 +75,46 @@ button.button-logreg {
   background-position: center;
   color: #fff;
   font-weight: 900;
+}
+
+h1,
+h2 {
+  font-family: "Playfair Display", sans-serif;
+  font-weight: 700;
+}
+
+.finder-line {
+  color: #fff;
+  width: 2rem;
+}
+
+.finder button {
+  color: #000;
+  font-weight: 900;
+}
+
+.form {
+  display: grid;
+  grid-template-columns: 15rem 15rem;
+  grid-template-rows: 3rem 3rem 3rem;
+  grid-gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.form .input-form {
+  background-color: #ffffff40;
+  border: 0px;
+  color: #fff;
+  border-radius: 5px;
+  font-weight: 700;
+}
+
+.input-form option {
+  color: #000;
+}
+
+::-webkit-calendar-picker-indicator {
+  filter: invert(1);
 }
 
 /* Footer */
@@ -78,8 +128,10 @@ footer {
 .grid-footer {
   display: grid;
   grid-template-areas:
-    "a a a"
-    "b c d";
+    "a"
+    "b"
+    "c"
+    "d";
   grid-gap: 1rem;
 }
 
@@ -186,6 +238,24 @@ hr.line {
 }
 
 @media (min-width: 768px) {
+  .hamburger {
+    display: none;
+  }
+
+  .nav-item {
+    display: initial;
+  }
+
+  .finder-container {
+    height: calc(100vh - 45px - 4vmax);
+  }
+
+  .finder-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
   .grid-footer {
     grid-template-areas:
       "a b"
@@ -194,11 +264,7 @@ hr.line {
 }
 
 @media (min-width: 992px) {
-  .hamburger {
-    display: none;
-  }
-
-  .nav-item {
-    display: initial;
+  .grid-footer {
+    grid-template-areas: "a b c d";
   }
 }
