--- a/home.css
+++ b/home.css
@@ -159,7 +159,11 @@ footer {
 
 .grid-footer .footer-title {
   font-weight: 700;
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
+}
+
+.grid-footer p {
+  margin-bottom: 0.5rem;
 }
 
 .grid-footer a {
