--- a/home.css
+++ b/home.css
@@ -159,7 +159,7 @@ footer {
 
 .grid-footer .footer-title {
   font-weight: 700;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
 }
 
 .grid-footer p {
